Test/hofs/Underspecified.dfy.expect
Underspecified.dfy(6,11): Error: type of bound variable '_v0' could not be determined; please specify the type explicitly
Underspecified.dfy(7,12): Error: type of bound variable '_v1' could not be determined; please specify the type explicitly
Underspecified.dfy(7,15): Error: type of bound variable '_v2' could not be determined; please specify the type explicitly
Underspecified.dfy(8,11): Error: type of bound variable 'a' could not be determined; please specify the type explicitly
4 resolution/type errors detected in Underspecified.dfy
